--- a/css/assignment_one.css
+++ b/css/assignment_one.css
@@ -4,3 +4,98 @@ Only this will be graded.
 */
 
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+}
+
+#mainBody {
+    display: flex;
+    /* gap: 100px; */
+    /* align-items: stretch; */
+    margin-bottom: 50px;
+}
+
+#rightContainer {
+    display: grid;
+    grid-template-rows: repeat(3, 160px);
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-areas:
+        "first last last"
+        "first last last"
+        "first last last";
+}
+
+.zero {
+    grid-area: first;
+}
+
+.one>img,
+.two>img,
+.three>img,
+.four>img,
+.five>img,
+.six>img {
+    grid-area: last;
+}
+
+.gridImage>img {
+    min-height: 100%;
+}
+
+header {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+@media screen and (max-width: 1000px) {
+    body {
+        width: 60%;
+        margin: 0, auto;
+    }
+
+    #mainBody {
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .display_md {
+        display: none;
+    }
+
+    #rightContainer {
+        grid-template-rows: repeat(3, 160px);
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+            "last last"
+            "last last"
+            "last last";
+    }
+}
+
+@media screen and (max-width: 570px) {
+    body {
+        width: 80%;
+        margin: 0, auto;
+    }
+
+    #mainBody {
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .display_md {
+        display: none;
+    }
+
+    #rightContainer {
+        grid-template-rows: repeat(6, 160px);
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "last" "last"
+            "last" "last"
+            "last" "last";
+    }
+}
