--- a/css/starter_styles.css
+++ b/css/starter_styles.css
@@ -3,6 +3,7 @@ html {
     font-weight: 200;
     font-size: 16px;
 }
+
 body {
     width: 70%;
     margin: auto;
@@ -117,10 +118,11 @@ tr {
 
 .gridImage img {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
 }
 
-.gridImage:hover, .externalWebsiteLink img:hover {
+.gridImage:hover,
+.externalWebsiteLink img:hover {
     transform: scale(1.02);
     transition: .8s ease-out;
 }
